--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,66 @@ body{
   font-family: 'Lato', sans-serif;
 }
 
+/* MIX */
+
+.flex{
+  display: flex;
+  justify-content: center;
+}
+
+/* ELEMENTS */
+
+.container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.album{
+  width: calc(100% / 5 - 40px);
+  height: 400px;
+  margin: 20px;
+  background-color: #2E3A46;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 20px;
+}
+
+.cover-box,
+.title-box,
+.author-box,
+.year-box{
+  width: 100%;
+}
+
+.title-box{
+  padding: 15px;
+}
+
+.cover-box{
+  width: 100%;
+  background-color: yellow;
+  display: flex;
+  justify-content: center;
+}
+
+.cover-box > img{
+  height: 180px
+}
+
+/* TYPO */
+
+
+h2{
+  color: white;
+}
+
+h3{
+  color: lightgrey;
+  font-style: italic;
+}
+
 /* STRUCTURE */
 
 header{
@@ -18,4 +78,22 @@ header{
 main{
   height: 90vh;
   background-color: #1E2D3B;
+  padding: 60px;
+  overflow-y: auto;
 }
+
+/* Header */
+
+.logo{
+  height: 100%;
+  margin: 0px 10px;
+  display: flex;
+  align-items: center;
+}
+
+.logo > img{
+  height: 80%;
+  cursor: pointer;
+}
+
+/* Main */
