--- a/css/style.css
+++ b/css/style.css
@@ -20,18 +20,18 @@ body{
 .container{
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .album{
   width: calc(100% / 5 - 40px);
   height: 400px;
   margin: 20px;
+  padding: 20px;
   background-color: #2E3A46;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 20px;
+  justify-content: flex-start;
 }
 
 .cover-box,
@@ -43,6 +43,8 @@ body{
 
 .title-box{
   padding: 15px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .cover-box{
@@ -52,14 +54,16 @@ body{
 }
 
 .cover-box > img{
-  height: 180px
+  height: 180px;
+  width: 100%;
+  display: block;
 }
 
 /* TYPO */
 
-
 h2{
   color: white;
+  font-size: 20px
 }
 
 h3{
